fixed firefox word wrap id

--- a/views/assets/styles/_global.scss
+++ b/views/assets/styles/_global.scss
@@ -6,7 +6,7 @@
 .app-body-class {
 	overflow-wrap: break-word;
 	word-wrap: break-word;
-	word-break: break-word;
+	word-break: break-all;
 }
 
 .app
